Simplifications around [_CoqProject].
One can use [make _CoqProject] to get an appropriate [_CoqProject]
file, when building this repositry in a stand-alone way.

--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -1,6 +1,5 @@
 # Disable some Coq warnings associated with Iris.
-# The Iris  [_CoqProject](https://gitlab.mpi-sws.org/iris/iris/-/blob/master/_CoqProject)
-# explains some of them.
+# See https://gitlab.mpi-sws.org/iris/iris/-/blob/master/_CoqProject.
 -arg -w -arg -notation-overridden
 # Similar to notation warnings.
 -arg -w -arg -custom-entry-overridden
@@ -13,322 +12,12 @@
 -arg -w -arg +future-coercion-class-field
 
 -Q coq-lens/Lens Lens
+-Q _build/default/coq-lens/Lens Lens
 -Q coq-upoly/upoly bedrock.upoly
+-Q _build/default/coq-upoly/upoly bedrock.upoly
 -Q theories/prelude bedrock.prelude
+-Q _build/default/theories/prelude bedrock.prelude
 -Q theories/lang bedrock.lang
--Q theories/noimport/doc bedrock.noimport.doc
-
-# Monads
-coq-upoly/upoly/prelude.v
-coq-upoly/upoly/base.v
-coq-upoly/upoly/monoid.v
-coq-upoly/upoly/UTypes.v
-coq-upoly/upoly/prod.v
-coq-upoly/upoly/sum.v
-coq-upoly/upoly/option.v
-coq-upoly/upoly/list.v
-coq-upoly/upoly/id.v
-coq-upoly/upoly/trace.v
-coq-upoly/upoly/reader.v
-coq-upoly/upoly/writer.v
-coq-upoly/upoly/state.v
-coq-upoly/upoly/optionT.v
-coq-upoly/upoly/listT.v
-coq-upoly/upoly/traceT.v
-coq-upoly/upoly/readerT.v
-coq-upoly/upoly/writerT.v
-coq-upoly/upoly/stateT.v
-coq-upoly/upoly/effects.v
-coq-upoly/upoly/upoly.v
-
-# Lens library (only the Elpi version is required)
-coq-lens/Lens/Lens.v
-coq-lens/Lens/Elpi/Elpi.v
-
-# Definitions about hardware (some misplaced)
-theories/prelude/hw_types.v
-theories/prelude/page.v
-theories/prelude/interrupts.v
-
-# Documentation
-# NOTE: You should NOT [Require]/[Import] these files.
-theories/noimport/doc/cpp/class_representations.v
-theories/noimport/doc/cpp/howto_sequential.v
-theories/noimport/doc/cpp/logic.v
-theories/noimport/doc/cpp/notations.v
-theories/noimport/doc/cpp/principles.v
-
-# Utility modules
-theories/prelude/stdpp_ssreflect.v
-theories/prelude/notations.v
-theories/prelude/tc_cond_type.v
-theories/prelude/wrap.v
-theories/prelude/fin.v
-theories/prelude/letstar.v
-theories/prelude/reserved_notation.v
-theories/prelude/relations.v
-theories/prelude/under_rel_proper.v
-
-theories/prelude/named_binder.v
-
-theories/prelude/base.v
-theories/prelude/option.v
-theories/prelude/addr.v
-theories/prelude/numbers.v
-theories/prelude/bytestring.v
-theories/prelude/bytestring_core.v
-theories/prelude/telescopes.v
-theories/prelude/avl.v
-theories/prelude/gmap.v
-theories/prelude/list.v
-theories/prelude/list_numbers.v
-theories/prelude/bitsN.v
-
-theories/prelude/axioms/funext.v
-theories/prelude/bool.v
-theories/prelude/fin_maps.v
-theories/prelude/fin_sets.v
-theories/prelude/listset_nodup.v
-theories/prelude/prelude.v
-theories/prelude/sets.v
-theories/prelude/propset.v
-theories/prelude/finite.v
-theories/prelude/fin_map_dom.v
-theories/prelude/functions.v
-theories/prelude/sts.v
-theories/prelude/lens.v
-
-theories/prelude/tactics/base_dbs.v
-theories/prelude/tactics/telescopes.v
-theories/prelude/tactics/proper.v
-
-# coq-elpi prelude
-theories/prelude/elpi/basis.v
-
-# coq-elpi derive plugins
-theories/prelude/elpi/derive.v
-theories/prelude/elpi/derive_test.v
-theories/prelude/elpi/derive/common.v
-theories/prelude/elpi/derive/countable.v
-theories/prelude/elpi/derive/eq_dec.v
-theories/prelude/elpi/derive/finite_type.v
-theories/prelude/elpi/derive/bitset.v
-theories/prelude/elpi/derive/finite.v
-theories/prelude/elpi/derive/inhabited.v
-theories/prelude/elpi/derive/lens.v
-
-# Adapters
-theories/lang/prelude/base.v
-theories/lang/prelude/addr.v
-
-# Proofmode.
-theories/lang/proofmode/proofmode.v
-theories/lang/proofmode/own_obs.v
-theories/lang/proofmode/fancy_updates.v
-
-# Algebraic structures
-theories/lang/algebra/list.v
-theories/lang/algebra/telescopes.v
-theories/lang/algebra/coGset.v
-theories/lang/algebra/gset_bij.v
-theories/lang/algebra/big_op.v
-theories/lang/algebra/monoid.v
-theories/lang/algebra/dfrac_agree.v
-theories/lang/algebra/excl_auth.v
-theories/lang/algebra/frac_auth.v
-theories/lang/algebra/authset.v
-theories/lang/algebra/restrict.v
-theories/lang/cpp/algebra/cfrac.v
-
-# BI-polymorphic modules
-theories/lang/bi/entailsN.v
-theories/lang/bi/laterable.v
-theories/lang/bi/telescopes.v
-theories/lang/bi/atomic1.v
-theories/lang/bi/atomic_commit.v
-theories/lang/bi/observe.v
-theories/lang/bi/only_provable.v
-theories/lang/bi/fractional.v
-theories/lang/bi/derived_laws.v
-theories/lang/bi/embedding.v
-theories/lang/bi/monpred.v
-theories/lang/bi/weakly_objective.v
-theories/lang/bi/invariants.v
-theories/lang/bi/own.v
-theories/lang/bi/na_invariants.v
-theories/lang/bi/cancelable_invariants.v
-theories/lang/bi/prelude.v
-theories/lang/bi/ChargeCompat.v
-theories/lang/bi/wand_borrow.v
-theories/lang/bi/errors.v
-theories/lang/bi/linearity.v
-theories/lang/bi/big_op.v
-theories/lang/bi/split_andb.v
-theories/lang/bi/split_andb_tests.v
-theories/lang/bi/split_frac.v
-theories/lang/bi/split_frac_tests.v
-theories/lang/bi/atomic_read.v
-theories/lang/bi/atomic_update.v
-theories/lang/bi/atomic_update_properties.v
-theories/lang/bi/fupd_iff.v
-theories/lang/bi/includedI.v
-theories/lang/bi/monpred_entailsN.v
-theories/lang/bi/prop_constraints.v
-theories/lang/cpp/bi/split_cfrac.v
-theories/lang/cpp/bi/split_cfrac_tests.v
-theories/lang/cpp/bi/cfractional.v
-theories/lang/cpp/bi/cfractional_tests.v
-theories/lang/cpp/bi/spec.v
-theories/lang/cpp/bi/spec/cfrac_splittable.v
-theories/lang/cpp/bi/spec/typed.v
-
-# Spec building blocks
-theories/lang/bi/spec.v
-theories/lang/bi/spec/constant.v
-theories/lang/bi/spec/contender_token.v
-theories/lang/bi/spec/exclusive.v
-theories/lang/bi/spec/frac_splittable.v
-theories/lang/bi/spec/knowledge.v
-theories/lang/bi/spec/nary_classes.v
-
-# Specific BIs
-theories/lang/si_logic/algebra.v
-theories/lang/si_logic/bi.v
-
-# Arithmetic support theory
-theories/lang/cpp/arith/types.v
-theories/lang/cpp/arith/operator.v
-theories/lang/cpp/arith/builtins.v
-theories/lang/cpp/arith/z_to_bytes.v
-
-# Syntax
-theories/lang/cpp/syntax/names.v
-theories/lang/cpp/syntax/types.v
-theories/lang/cpp/syntax/type_notations.v
-theories/lang/cpp/syntax/expr.v
-theories/lang/cpp/syntax/expr_notations.v
-theories/lang/cpp/syntax/stmt.v
-theories/lang/cpp/syntax/stmt_notations.v
-theories/lang/cpp/syntax/decl.v
-theories/lang/cpp/syntax/translation_unit.v
-theories/lang/cpp/syntax/typing.v
-theories/lang/cpp/ast.v
-theories/lang/cpp/code_notations.v
-
-# Semantics
-theories/lang/cpp/semantics/ptrs.v
-theories/lang/cpp/semantics/values.v
-theories/lang/cpp/semantics/val_wrap.v
-theories/lang/cpp/semantics/operator.v
-theories/lang/cpp/semantics/builtins.v
-theories/lang/cpp/semantics/genv.v
-theories/lang/cpp/semantics/sub_module.v
-theories/lang/cpp/semantics/subtyping.v
-theories/lang/cpp/semantics/promotion.v
-theories/lang/cpp/semantics/characters.v
-theories/lang/cpp/semantics/cast.v
-theories/lang/cpp/semantics/cast_operator.v
-theories/lang/cpp/semantics/types.v
-theories/lang/cpp/semantics/dispatch.v
-theories/lang/cpp/semantics/intensional.v
-theories/lang/cpp/semantics.v
-
-# Program Logic
-theories/lang/base_logic/mpred.v
-theories/lang/base_logic/upred_entailsN.v
-theories/lang/base_logic/iprop_prop.v
-theories/lang/base_logic/iprop_own.v
-theories/lang/base_logic/iprop_invariants.v
-theories/lang/base_logic/mpred_prop.v
-theories/lang/base_logic/monpred_own.v
-theories/lang/base_logic/monpred_invariants.v
-theories/lang/base_logic/own_instances.v
-theories/lang/base_logic/invariants.v
-theories/lang/base_logic/lib/auth_set.v
-theories/lang/base_logic/lib/spectra.v
-theories/lang/base_logic/lib/spectra_iprop.v
-theories/lang/base_logic/lib/spectra_mpred.v
-
-
-
-theories/lang/cpp/logic/entailsN.v
-theories/lang/cpp/logic/mpred.v
-theories/lang/cpp/logic/pred.v
-theories/lang/cpp/logic/pred_paradoxes.v
-theories/lang/cpp/logic/path_pred.v
-theories/lang/cpp/logic/operator.v
-theories/lang/cpp/logic/rep.v
-theories/lang/cpp/logic/rep_defs.v
-theories/lang/cpp/logic/heap_pred/aggregate.v
-theories/lang/cpp/logic/heap_pred/any.v
-theories/lang/cpp/logic/heap_pred/block.v
-theories/lang/cpp/logic/heap_pred/everywhere.v
-theories/lang/cpp/logic/heap_pred/least.v
-theories/lang/cpp/logic/heap_pred/null.v
-theories/lang/cpp/logic/heap_pred/prelude.v
-theories/lang/cpp/logic/heap_pred/prim.v
-theories/lang/cpp/logic/heap_pred/simple.v
-theories/lang/cpp/logic/heap_pred/tptsto.v
-theories/lang/cpp/logic/heap_pred/uninit.v
-theories/lang/cpp/logic/heap_pred/valid.v
-theories/lang/cpp/logic/heap_pred.v
-theories/lang/cpp/logic/rep_proofmode.v
-theories/lang/cpp/logic/cptr.v
-theories/lang/cpp/logic/wp.v
-theories/lang/cpp/logic/const.v
-theories/lang/cpp/logic/wp_notations.v
-theories/lang/cpp/logic/destroy.v
-theories/lang/cpp/logic/initializers.v
-theories/lang/cpp/logic/dispatch.v
-theories/lang/cpp/logic/call.v
-theories/lang/cpp/logic/expr.v
-theories/lang/cpp/logic/new_delete.v
-theories/lang/cpp/logic/stmt.v
-theories/lang/cpp/logic/func.v
-theories/lang/cpp/logic/translation_unit.v
-theories/lang/cpp/logic/z_to_bytes.v
-theories/lang/cpp/logic/arr.v
-theories/lang/cpp/logic/atomics.v
-theories/lang/cpp/logic/atomics_derived.v
-theories/lang/cpp/logic/builtins.v
-theories/lang/cpp/logic/layout.v
-theories/lang/cpp/logic/raw.v
-theories/lang/cpp/logic/object_repr.v
-theories/lang/cpp/logic/core_string.v
-theories/lang/cpp/logic/cstring.v
-theories/lang/cpp/logic/zstring.v
-theories/lang/cpp/logic/string.v
-theories/lang/cpp/logic/vbyte.v
-theories/lang/cpp/logic/lib/agree.v
-theories/lang/cpp/logic/lib/auth_frac.v
-theories/lang/cpp/logic/lib/dfrac_agree.v
-theories/lang/cpp/logic.v
-
-# Specifications
-theories/lang/cpp/specs/spec_notations.v
-theories/lang/cpp/specs/classy.v
-theories/lang/cpp/specs/arg_errors.v
-theories/lang/cpp/specs/wp_spec_compat.v
-theories/lang/cpp/specs/functions.v
-theories/lang/cpp/specs/cpp_specs.v
-theories/lang/cpp/specs.v
-
-# Notations
-theories/lang/cpp/notations.v
-theories/lang/cpp/primitives.v
-theories/lang/cpp/specs/elaborate.v
-
-# Notations for cpp2v
-theories/lang/cpp/parser.v
-
-# Soundness semantics
-theories/lang/cpp/compile.v
-
-theories/lang/cpp.v
-
-# "consistency" proofs
-theories/lang/cpp/model/simple_pointers_utils.v
-theories/lang/cpp/model/simple_pointers.v
-theories/lang/cpp/model/inductive_pointers_utils.v
-theories/lang/cpp/model/inductive_pointers.v
-theories/lang/cpp/model/simple_pred.v
+-Q _build/default/theories/lang bedrock.lang
+-Q theories/noimport bedrock.noimport
+-Q _build/default/theories/noimport bedrock.noimport
