[CI] More variables in trigger.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,10 @@ trigger:
     ORIGIN_CI_MERGE_REQUEST_LABELS: $CI_MERGE_REQUEST_LABELS
     ORIGIN_CI_MERGE_REQUEST_PROJECT_ID: $CI_MERGE_REQUEST_PROJECT_ID
     ORIGIN_CI_MERGE_REQUEST_SOURCE_BRANCH_NAME: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    ORIGIN_CI_MERGE_REQUEST_TARGET_BRANCH_NAME: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME
     ORIGIN_CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE
     ORIGIN_CI_PIPELINE_URL: $CI_PIPELINE_URL
+    ORIGIN_CI_PROJECT_PATH: $CI_PROJECT_PATH
     ORIGIN_CI_PROJECT_TITLE: $CI_PROJECT_TITLE
   trigger:
     project: bedrocksystems/formal-methods/fm-ci
