Dune workspace build hack.

--- a/coq-lens/Lens/Elpi/dune
+++ b/coq-lens/Lens/Elpi/dune
@@ -2,3 +2,9 @@
  (name Lens.Elpi)
  (theories Lens elpi elpi.apps.derive)
  (package coq-lens-elpi))
+
+; Hack to ensure the coq-elpi package is avalable. *)
+(rule
+ (targets dummy.v)
+ (deps (package coq-elpi))
+ (action (with-stdout-to %{targets} (echo "(* dummy file *)"))))
