--- a/coq-upoly/coq-upoly.opam
+++ b/coq-upoly/coq-upoly.opam
@@ -2,36 +2,20 @@
 opam-version: "2.0"
 synopsis: "Extension to std++ Coq library for universe polymorphic monads"
 maintainer: [
-  "Gregory Malecha <gregory@bedrocksystems.com>"
-  "Abhishek Anand <abhishek@bedrocksystems.com>"
-  "Gordon Stewart <gordon@bedrocksystems.com>"
-  "Jasper Haag <jasper@bedrocksystems.com>"
-  "Yoichi Hirai <yoichi@bedrocksystems.com>"
-  "David Swasey <david@bedrocksystems.com>"
-  "Jan-Oliver Kaiser <janno@bedrocksystems.com>"
-  "Hai Dang <hai@bedrocksystems.com>"
-  "Paolo Giarrusso <paolo@bedrocksystems.com>"
-  "Simon Hudon <simon@bedrocksystems.com>"
-  "František Farka <frantisek@bedrocksystems.com>"
-  "Rodolphe Lepigre <rodolphe@bedrocksystems.com>"
+  "David Swasey <david@bluerock.io>"
+  "Gregory Malecha <gregory@bluerock.io>"
+  "Jan-Oliver Kaiser <janno@bluerock.io>"
+  "Rodolphe Lepigre <rodolphe@bluerock.io>"
 ]
 authors: [
-  "Gregory Malecha <gregory@bedrocksystems.com>"
-  "Abhishek Anand <abhishek@bedrocksystems.com>"
-  "Gordon Stewart <gordon@bedrocksystems.com>"
-  "Jasper Haag <jasper@bedrocksystems.com>"
-  "Yoichi Hirai <yoichi@bedrocksystems.com>"
-  "David Swasey <david@bedrocksystems.com>"
-  "Jan-Oliver Kaiser <janno@bedrocksystems.com>"
-  "Hai Dang <hai@bedrocksystems.com>"
-  "Paolo Giarrusso <paolo@bedrocksystems.com>"
-  "Simon Hudon <simon@bedrocksystems.com>"
-  "František Farka <frantisek@bedrocksystems.com>"
-  "Rodolphe Lepigre <rodolphe@bedrocksystems.com>"
+  "David Swasey <david@bluerock.io>"
+  "Gregory Malecha <gregory@bluerock.io>"
+  "Jan-Oliver Kaiser <janno@bluerock.io>"
+  "Rodolphe Lepigre <rodolphe@bluerock.io>"
 ]
-license: "BedRock Open-Source License"
-homepage: "https://gitlab.com/bedrocksystems/cpp2v-core"
-bug-reports: "https://gitlab.com/bedrocksystems/cpp2v-core/-/issues"
+license: "LGPL-2.1-only"
+homepage: "https://github.com/bedrocksystems/BRiCk"
+bug-reports: "https://github.com/bedrocksystems/BRiCk/issues"
 depends: [
   "dune" {>= "3.14"}
   "coq-stdpp" {>= "dev.2024-02-09.0.cafd7113"}
@@ -51,4 +35,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://gitlab.com/bedrocksystems/cpp2v-core.git"
+dev-repo: "git+https://github.com/bedrocksystems/BRiCk.git"
