--- a/coq-lens/tests/dune
+++ b/coq-lens/tests/dune
@@ -1,8 +1,8 @@
 (cram
  (applies_to :whole_subtree)
  (deps
-  %{bin:coqc}
-  %{bin:coqdep}
+  (package coq-core)
+  (package coq-stdlib)
   (package coq-lens)
   ;(package coq-lens-tc)
   (package coq-lens-elpi)
