--- a/setup-tool/tests/dune
+++ b/setup-tool/tests/dune
@@ -1,8 +1,8 @@
 (cram
  (applies_to :whole_subtree)
  (deps
-  %{bin:coqc}
-  %{bin:coqdep}
+  (package coq-core)
+  (package coq-stdlib)
   (package coq-stdpp)
   (package coq-iris)
   (package coq-upoly)
