--- a/rocq-lens/Lens/Elpi/dune
+++ b/rocq-lens/Lens/Elpi/dune
@@ -1,6 +1,6 @@
 (coq.theory
  (name Lens.Elpi)
- (theories Lens elpi elpi.apps.derive)
+ (theories Lens elpi elpi_elpi elpi.apps.derive)
  (package rocq-lens-elpi))
 
 ; Hack to ensure the coq-elpi package is avalable. *)
