--- a/coq-upoly/dune
+++ b/coq-upoly/dune
@@ -6,6 +6,7 @@
      -w -notation-overridden
      -w +deprecated-hint-without-locality
      -w +deprecated-instance-without-locality
+     -w +automatic-prop-lowering
      -w +unknown-option
      -w +future-coercion-class-field))
    (coqdoc_flags
