Add author and maintainer information

--- a/elpi-extra/dune-project
+++ b/elpi-extra/dune-project
@@ -3,7 +3,14 @@
 (name elpi-extra)
 
 (generate_opam_files)
+(license "LGPL-2.1+BedRock")
 
+(maintainers
+  "Jan-Oliver Kaiser <janno@bluerock.io>"
+  "Rodolphe Lepigre <rodolphe@bluerock.io>")
+
+(authors
+  "David Swasey <david@bluerock.io>")
 (package
  (name elpi-extra)
  (synopsis "Extension of the Elpi standard library")
