--- a/rocq-lens/dune-project
+++ b/rocq-lens/dune-project
@@ -16,6 +16,7 @@
 (package
  (name rocq-lens)
  (synopsis "Generation of lenses for record datatypes")
+ (license BSD-3-Clause)
  (depends
   (coq (>= 8.13.0))))
 
@@ -29,6 +30,7 @@
 (package
  (name rocq-lens-elpi)
  (synopsis "Generation of lenses for record datatypes, Elpi backend")
+ (license LGPL-2.1-or-later)
  (depends
   rocq-lens
   coq-elpi))
