--- a/elpi-extra/dune-project
+++ b/elpi-extra/dune-project
@@ -1,17 +1,20 @@
-(lang dune 3.14)
+(lang dune 3.16)
 (using coq 0.8)
 (name elpi-extra)
 
 (generate_opam_files)
-(license "LGPL-2.1+BedRock")
 
 (maintainers
-  "Jan-Oliver Kaiser <janno@bluerock.io>"
-  "Rodolphe Lepigre <rodolphe@bluerock.io>")
+ "Jan-Oliver Kaiser <janno@bluerock.io>")
 
 (authors
-  "David Swasey <david@bluerock.io>")
+ "David Swasey <david@bluerock.io>")
+
+(license LicenseRef-BedRock)
+
+(source (github bedrocksystems/cpp2v))
+
 (package
  (name elpi-extra)
- (synopsis "Extension of the Elpi standard library")
+ (synopsis "Extension of the (Rocq) Elpi standard library")
  (depends coq-stdlib coq-elpi ltac2-extra))
